--- a/view/comprar.html
+++ b/view/comprar.html
@@ -32,7 +32,7 @@
 				<span class="sr-only">Informações</span>
 				<h5 class="card-title"><span class="sr-only">Nome do animal: </span>{{pet.name}}</h5>
 				<p class="card-text">Categoria: {{pet.category.name}}</p>
-				<p class="card-text">Tags: <span ng-repeat="tag in pet.tags">'{{tag.name}}' </span></p>
+				<p class="card-text">Tags: <span ng-repeat="tag in pet.tags" class="tag-animal">'{{tag.name}}' </span></p>
 			</div>
 			<div class="card-footer">
 				<a href="" class="btn btn-outline-info btn-block" ng-click="clickComprar($parent.$index, $index)" role="button" data-toggle="modal"  data-target=".modalInformacoesPedido">Comprar</a>
@@ -68,7 +68,7 @@
 							<span class="sr-only">Informações</span>
 							<h5 class="card-title"><span class="sr-only">Nome do animal: </span>{{petEscolhido.name}}</h5>
 							<p class="card-text">Categoria: {{petEscolhido.category.name}}</p>
-							<p class="card-text">Tags: <span ng-repeat="tag in petEscolhido.tags">'{{tag.name}}' </span></p>
+							<p class="card-text">Tags: <span class="tag-animal" ng-repeat="tag in petEscolhido.tags">'{{tag.name}}' </span></p>
 							<p><span class="font-weight-bold">Data de entrega prevista para:</span> {{dataDeEntrega}}</p>
 						</div>
 					</div>
