--- a/view/pedidos.html
+++ b/view/pedidos.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="input-group mb-3">
         <div class="input-group-prepend">
-            <span class="input-group-text" id="busca-por-numero-pedido" aria-label="Campo de busca por número do pedido">Número do pedido</span>
+            <span class="input-group-text" id="busca-por-numero-pedido" aria-label="Campo de busca por número do pedido">Número do pedido:</span>
         </div>
         <input type="number" min="0" class="form-control" placeholder="Pedido" ng-model="pedidoID" aria-label="Campo do número do pedido" aria-describedby="busca-por-numero-pedido">
         <div class="input-group-append">
@@ -13,28 +13,28 @@
         </div>
     </div>
 
-    <div class="alert alert-danger" role="alert" ng-show="pedidoEncontrado == true">
-        Pedido não encontrado!
+    <div class="alert alert-danger" role="alert" ng-hide="pedidoPronto == true || pedidoPronto == null">
+        Pedido não encontrado
     </div>
 
     <div ng-hide="pedidoPronto != true">
         <h4 class="font-weight-bold">Informações do pedido:</h4>
         <div class="info">
-            <p><span  class="font-weight-bold">Número do pedido:</span> {{pedido.id}}</p>
+            <p class="no-margin"><span class="font-weight-bold">Número do pedido:</span> {{pedido.id}}</p>
             <!--<p><span  class="font-weight-bold">Quantidade:</span> {{pedido.quantity}}</p>-->
-            <p><span  class="font-weight-bold">Data de entrega estimada:</span> {{pedido.shipDate}}</p>
-            <p><span  class="font-weight-bold">Estado<span class="sr-only"> do pedido</span>:</span> {{pedido.status}}</p>
+            <p class="no-margin"><span class="font-weight-bold">Data de entrega estimada:</span> {{pedido.shipDate}}</p>
+            <p class="no-margin"><span class="font-weight-bold">Estado do pedido:</span> {{pedido.status}}</p>
 
-            <div ng-hide="petPedidoPronto != true">
-                <h5 class="font-weight-bold">Informações do animal:</h5>
+            <div class="no-margin" ng-hide="petPedidoPronto != true">
+                <h5 class="font-weight-bold no-margin">Informações do animal:</h5>
 
                 <div class="info">
-                    <img class="foto-animal" ng-src="{{petPedido.photoUrls[0]}}" alt="Foto de {{petPedido.name}}">
+                    <img class="foto-animal no-margin" ng-src="{{petPedido.photoUrls[0]}}" alt="Foto de {{petPedido.name}}">
 
-                    <h6 class="card-title font-weight-bold"><span class="sr-only">Nome do animal: </span>{{petPedido.name}}</h6>
-                    <p class="card-text"><span  class="font-weight-bold">Categoria:</span> {{petPedido.category.name}}</p>
-                    <p class="card-text"><span  class="font-weight-bold">Tags:</span> <span ng-repeat="tag in petPedido.tags">'{{tag.name}}' </span></p>
-                    <p class="card-text"><span  class="font-weight-bold">Estado<span class="sr-only"> do animal</span>:</span> {{petPedido.status}}</p>
+                    <h6 class="card-title font-weight-bold no-margin"><span class="sr-only">Nome do animal: </span>{{petPedido.name}}</h6>
+                    <p class="card-text no-margin"><span  class="font-weight-bold">Categoria:</span> {{petPedido.category.name}}</p>
+                    <p class="card-text no-margin"><span  class="font-weight-bold">Tags:</span> <span class="tag-animal" ng-repeat="tag in petPedido.tags">'{{tag.name}}' </span></p>
+                    <p class="card-text no-margin"><span  class="font-weight-bold">Estado do animal:</span> {{petPedido.status}}</p>
                 </div>
             </div>
         </div>
