--- a/css/pedidos.css
+++ b/css/pedidos.css
@@ -11,3 +11,15 @@
     width: 3rem;
     height: 100%;
 }
+
+.order-cancelado {
+    color: red;
+}
+
+.order-enviado {
+    color: orange;
+}
+
+.order-entregue {
+    color: green;
+}
